--- a/components/uv5op94c5-go/overlays/stage/deployment-patch.yaml
+++ b/components/uv5op94c5-go/overlays/stage/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
+      - image: quay.io/rhtap-test-organization-jk/rhtap-qe:jenkins-8cbfd0e1e3befb0bde76aaf1d28a56c84c35761c
         name: container-image  
